2009-01-13  Eric Seidel  <eric@webkit.org>

        Reviewed by Mark Rowe.

        Speculative fix for an Uninitialized Memory Read (UMR)
        seen by purify in chormium's equivalent V8 file.

        * bindings/js/JSSVGPODTypeWrapper.h:
        (WebCore::PODTypeWrapperCacheInfo::PODTypeWrapperCacheInfo):

2009-01-13  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Eric Seidel.

        Land portions of platform/graphics/chromium.
        https://bugs.webkit.org/show_bug.cgi?id=23297

        * platform/graphics/chromium/FontCustomPlatformData.cpp: Added.
        (WebCore::FontCustomPlatformData::~FontCustomPlatformData):
        (WebCore::FontCustomPlatformData::fontPlatformData):
        (WebCore::EOTStream::EOTStream):
        (WebCore::EOTStream::read):
        (WebCore::readEmbedProc):
        (WebCore::createUniqueFontName):
        (WebCore::createFontCustomPlatformData):
        * platform/graphics/chromium/FontCustomPlatformData.h: Added.
        (WebCore::FontCustomPlatformData::FontCustomPlatformData):
        * platform/graphics/chromium/FontLinux.cpp: Added.
        (WebCore::Font::drawGlyphs):
        (WebCore::Font::drawComplexText):
        (WebCore::Font::floatWidthForComplexText):
        (WebCore::Font::offsetForPositionForComplexText):
        (WebCore::Font::selectionRectForComplexText):
        * platform/graphics/chromium/FontPlatformData.h: Added.

2009-01-13  Mark Rowe  <mrowe@apple.com>

        Rubber-stamped by Oliver Hunt.

        Don't copy DOMStringList.idl into the framework bundle.

        * WebCore.xcodeproj/project.pbxproj:

2009-01-13  Christian Dywan  <christian@twotoasts.de>

        Build fix, StorageEvent is only defined if we have DOM_STORAGE

        * dom/Document.cpp:
        (WebCore::Document::createEvent): Conditionalize StorageEvent

2009-01-13  Darin Adler  <darin@apple.com>

        Reviewed by Adele Peterson.

        Bug 23277: space bar scrolls the page when typed in any text field