@@ -1,3 +1,13 @@
+2009-01-13  Chris Marrin  <cmarrin@apple.com>
+
+        Reviewed by Darin Adler.
+
+        Implemented https://bugs.webkit.org/show_bug.cgi?id=23298
+        Simple fix to convertToLength to catch style==null cases
+
+        * css/CSSStyleSelector.cpp:
+        (WebCore::convertToLength):
+
 2009-01-13  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Mark Rowe.
